# umediaserver

./: .gitignore  CMakeLists.txt  README.md
doc/: command_line_api.txt  command_line_sample.sh  notes-media-display-controller-test.txt
files/conf/: 00-ums.conf.in  CMakeLists.txt  fileschema.js.in  simulate_rm_sequence.json  umediaserver.conf.in
files/launch/: umediaserver.conf.in  umediaserver.in
files/pkgconfig/: umediaserver-private.pc.in  umediaserver.pc.in
files/scripts/internal/: ._create-service-file.sh  create-role-file.sh  create-service-file.sh
files/scripts/public/: find-security-warnings.sh.in
files/sysbus/: com.webos.mdc_client.role.json.in  com.webos.mdc_content_provider.role.json.in  com.webos.media.api.json  com.webos.media.client.perm.json  com.webos.media.client.python.json.prv.in  com.webos.media.client.python.json.pub.in  com.webos.media.client.python.role.json.in  com.webos.media.client.test.json.prv.in  com.webos.media.client.test.json.pub.in  com.webos.media.client.test.role.json.in  com.webos.media.groups.json  com.webos.media.json.prv.in  com.webos.media.json.pub.in  com.webos.media.perm.json  com.webos.media.role.json.in  com.webos.media.service.in  com.webos.media.service.prv.in  com.webos.pipeline.service.prv.in  com.webos.pipelinecontroller.service.prv.in  com.webos.rm.client.perm.json  com.webos.rm.client.service.prv.in  com.webos.rm.client.test.json.prv.in  com.webos.rm.client.test.role.json.in  com.webos.sim-pipeline.api.json  com.webos.sim-pipeline.json.prv.in  com.webos.sim-pipeline.perm.json  com.webos.sim-pipeline.role.json.in  com.webos.sim-pipeline.service.in  com.webos.umediapipeline.api.json  com.webos.umediapipeline.json.prv.in  com.webos.umediapipeline.perm.json  com.webos.umediapipeline.role.json.in  com.webos.umediapipeline.service.in  com.webos.ums-status.json.prv.in  com.webos.ums-status.perm.json  com.webos.ums-status.role.json.in
include/public/: Logger.h  MDCClient.h  MDCContentProvider.h  ResourceManagerClient.h  ResourceManagerClient_c.h  ResourceManagerClient_common.h  UMSConnector.h  UMSConnector_common.h  UMSConnector_wrapper.h  dto_types.h  uMediaClient.h  uMediaClient_wrapper.h  uMediaTypes.h
install/: desktop_install_ums.sh  luna_service2_config.sh  start_luna_service2.sh
src/dbi/: CMakeLists.txt  dbi.cpp  dbi.h  exception.h  from.h  into.h  query.cpp  query.h  value_wrapper.h
src/logger/: CMakeLists.txt  Logger_id.h  Logger_macro.h  config.txt
src/mdc_client/: CMakeLists.txt  MDCClient.cpp  mdc_client.pc.in
src/mdc_content_provider/: CMakeLists.txt  MDCContentProvider.cpp  mdc_content_provider.pc.in
src/media_client/: CMakeLists.txt  uMediaClient.cpp  uMediaClient_wrapper.cpp  umedia_api.pc.in  umedia_api_c.pc.in
src/media_display_controller/: AVOutputContextlessDisplayConnector.cpp  AVOutputContextlessDisplayConnector.h  AcbObserver.cpp  AcbObserver.h  AppObserver.cpp  AppObserver.h  CMakeLists.txt  ConnectionPolicy.cpp  ConnectionPolicy.h  ControlInterface.cpp  ControlInterface.h  LayoutManager.cpp  LayoutManager.h  MediaDisplayController.cpp  MediaDisplayController.h  TVDisplayConnector.cpp  TVDisplayConnector.h  VideooutputConnector.cpp  VideooutputConnector.h  events.h  interfaces.h  media_object.cpp  media_object.h  states.h
src/pipeline/: CMakeLists.txt  Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h
src/power_manager/: CMakeLists.txt  PowerManager.cpp  PowerManager.h  interfaces.h
src/process_pool/: CMakeLists.txt  Process.cpp  Process.h  ProcessPool.cpp  ProcessPool.h
src/registry/: CMakeLists.txt  Registry.cpp  Registry.h  db_schema.h
src/resource_manager/: AcquireQueue.cpp  AcquireQueue.h  AppLifeManager.cpp  AppLifeManager.h  CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  ResourceManagerClient.cpp  ResourceManagerClient_c.cpp
src/server/: AppObserver.cpp  AppObserver.h  CMakeLists.txt  main.cpp  uMediaserver.cpp  uMediaserver.h
src/tools/: install_dyn_pipeline.sh  service-bus.sh
src/ums_connector/: CMakeLists.txt  CallbackManager.cpp  CallbackManager.h  UMSConnector.cpp  UMSConnector_impl.cpp  UMSConnector_impl.h  UMSConnector_wrapper.cpp  config.txt
src/utils/: CMakeLists.txt  DPC.h  DirectoryWatcher.h  GLibHelper.h  GenerateUniqueID.h  GlibHelper_test.cpp  mdc_client.cpp  mdc_content_provider.cpp  rmc.cpp  umc.cpp  ums-status.cpp  umsTrace.h
src/utils/ums-status2/: CMakeLists.txt  start-ums-status.sh.in  ums-status-client.js  ums-status-server.js  ums-status.html
test/dbi/: CMakeLists.txt  test_dbi.cpp
test/media_client/: CMakeLists.txt  test_media_client.cpp
test/pipelines/: CMakeLists.txt  pipeline.h  reference_pipeline.c  reference_pipeline.h  simulated-pipeline.cpp
test/process_pool/: CMakeLists.txt  glib_child_watch_test.cpp  process_pool_test.cpp  process_test.cpp
test/python/: CMakeLists.txt  GF-5095.sh  GF-7177.sh  PLAT-5201.sh  client.py  console.py  crash.py  endurance.py  endurance.sh  hang.py  load.py  memleak.py  ping-pong.py  pipelinePoolPerf.py  simple.py
test/python/binding/: CMakeLists.txt  uMediaClient.i
test/python/binding/uMediaServer/uMSTest/: __init__.py  cmdparser.py  main.py
test/python/framework/: CMakeLists.txt
test/python/framework/src/: cli_analyzer.py  cli_controller.py  config.py.in
test/python/framework/src/detector/: Sequence.py  SequenceCases.py  __init__.py  detector.py
test/python/framework/src/formatter/: __init__.py  formatter.py
test/python/framework/src/parser/: __init__.py  parser.py
test/python/framework/test/unit/: detector.py
test/python/logAnalysis/: pipelinePoolLog.pl
test/registry/: CMakeLists.txt  test_config_import.cpp  test_registry.cpp
test/resource_manager/: CMakeLists.txt  RM_test.cpp  test.cpp  test_client_unit.cpp
test/tv_services_simulator/: CMakeLists.txt  main.cpp
test/ums_connector/: CMakeLists.txt  test.cpp
